basic save support

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CFLAGS=-g -Wall -std=c99 -D_BSD_SOURCE -DLDAP_DEPRECATED=1
 LDFLAGS=-lncurses -lldap -lmenu -llber
-OBJECTS=ldapbrowse.o tree.o treeview.o
+OBJECTS=ldapbrowse.o tree.o treeview.o ldifwriter.o
 
 ldapbrowse: $(OBJECTS)
 	$(CC) $(CFLAGS) $* -o $@ $^ $(LDFLAGS)
