use rdn part as suggested filename on save

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CFLAGS=-g -Wall -std=c99 -D_BSD_SOURCE -DLDAP_DEPRECATED=1
-LDFLAGS=-lncurses -lldap -lmenu -llber
-OBJECTS=ldapbrowse.o tree.o treeview.o ldifwriter.o
+LDFLAGS=-lncurses -lldap -lmenu -lform -llber
+OBJECTS=ldapbrowse.o tree.o treeview.o ldifwriter.o stringutils.o
 
 ldapbrowse: $(OBJECTS)
 	$(CC) $(CFLAGS) $* -o $@ $^ $(LDFLAGS)
