--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,7 @@ RUNNER:=valgrind -q --leak-check=full --error-exitcode=255
 
 all: tests
 
-tests: treeTest treeviewTest
+tests: treeTest treeviewTest stringUtilsTest
 .PHONY: tests
 
 ../src/%.o : ../src/%.c
@@ -15,6 +15,9 @@ treeview: ../src/tree.o ../src/treeview.o treeview.o
 				$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 tree: ../src/tree.o tree.o
+				$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+stringUtilsTest: ../src/stringutils.o stringutils.o
 				$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 %Test: %
