--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,7 @@ jobs:
       - name: build
         run: (cd src && make)
       - name: test
-        shell: 'script -q -e -c "bash {0}"'
-        run: (cd test && make)
+        run: (export TERM=xterm-256color && cd test && make)
       - name: package
         run: (cd src && make clean tar)
       - run: export RELEASE_TAR_FILE=$(ls src/*.tar.gz)
